--- a/package.json
+++ b/package.json
@@ -1,9 +1,11 @@
 {
   "name": "bully-algorithm",
   "version": "1.0.0",
-  "description": "Distributed election solution in Node/Express",
+  "description": "Distributed election algorithm in Node/Express",
   "main": "index.js",
   "scripts": {
+    "start": "node index.js 1:http://localhost:3000 2:http://localhost:3001",
+    "debug": "nodemon index.js 1:http://localhost:3000 2:http://localhost:3001",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
@@ -18,5 +20,8 @@
   "homepage": "https://github.com/emagdne/bully-algorithm#readme",
   "dependencies": {
     "express": "^4.16.4"
+  },
+  "devDependencies": {
+    "nodemon": "^1.18.10"
   }
 }
